manifests/weihnachtsmarkt/kinto-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kinto
  namespace: weihnachtsmarkt
  labels:
    app: kinto
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: kinto-weihnachtsmarkt.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kinto
          servicePort: api
  tls:
  - hosts:
    - kinto-weihnachtsmarkt.codeformuenster.org
    secretName: kinto-weihnachtsmarkt-tls
